Migrate Executor off private Kafka APIs
Signed-off-by: Kyle Liberti <kliberti.us@gmail.com>